# orc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  appveyor.yml  create_customer_demographics.hql  pom.xml
cmake/Modules/: FindLZO.cmake
doc/plan/: plan.tex
doc/spec/: CompressionStream.graffle  ORCFileStructure.graffle  TreeWriters.graffle  orc-spec.tex
libs/: CMakeLists.txt
libs/binary/x86/: libprotobuf-lite.lib
libs/libuv-0.11.29/: CMakeLists.txt
libs/protobuf-2.6.0/: CMakeLists.txt
libs/protobuf-2.6.0/gtest/msvc/: gtest.vcxproj  gtest_main.vcxproj
libs/protobuf-2.6.0/vsprojects/: libprotobuf-lite.vcxproj  libprotobuf.vcxproj  libprotoc.vcxproj  lite-test.vcxproj  protoc.vcxproj  test_plugin.vcxproj  tests.vcxproj
src/: ByteRLE.cc  ByteRLE.hh  CMakeLists.txt  ColumnPrinter.cc  ColumnPrinter.hh  ColumnReader.cc  ColumnReader.hh  Compression.cc  Compression.hh  DataReader.cc  DataReader.hh  Exceptions.cc  Exceptions.hh  InputStream.cc  InputStream.hh  LocalFileDump.cc  LocalFileReader.cc  LocalFileReader.make  OrcFile.cc  OrcFile.hh  RLE.cc  RLE.hh  RLEs.cc  RLEs.hh  RLEv1.cc  RLEv1.hh  Reader.cc  TestRLE.cc  TypeImpl.cc  TypeImpl.hh  Vector.cc  gtest-wrapper.h  orc-config.hh.in  orc-proto-wrapper.cc  orc_proto.proto  test-orc.cc  tmp.cc  uv-wrapper.h
src/main/java/org/apache/hadoop/hive/ql/io/file/orc/: BitFieldReader.java  BitFieldWriter.java  BooleanColumnStatistics.java  ColumnStatistics.java  ColumnStatisticsImpl.java  CompressionCodec.java  CompressionKind.java  DictionaryWriter.java  DoubleColumnStatistics.java  DynamicIntArray.java  FileDump.java  InStream.java  IntegerColumnStatistics.java  ORCStruct.java  OrcFile.java  OrcInputFormat.java  OrcOutputFormat.java  OrcSerde.java  OutStream.java  PositionRecorder.java  PositionedOutputStream.java  Reader.java  ReaderImpl.java  RecordReader.java  RecordReaderImpl.java  RunLengthByteReader.java  RunLengthByteWriter.java  RunLengthIntegerReader.java  RunLengthIntegerWriter.java  SerializationUtils.java  SnappyCodec.java  StringColumnStatistics.java  StripeInformation.java  Writer.java  WriterImpl.java  ZlibCodec.java
src/main/java/org/apache/hadoop/hive/ql/io/orc/: BitFieldReader.java  BitFieldWriter.java  BitPackReader.java  BitPackWriter.java  BooleanColumnStatistics.java  ColumnStatistics.java  ColumnStatisticsImpl.java  ColumnVector.java  CompressionKind.java  DictionaryWriter.java  DoubleColumnStatistics.java  DoubleRedBlackTree.java  DynamicByteArray.java  DynamicDoubleArray.java  DynamicFloatArray.java  DynamicIntArray.java  FileDump.java  FixedBitSizes.java  FloatRedBlackTree.java  InStream.java  IntegerColumnStatistics.java  NewRunLengthIntegerReader.java  NewRunLengthIntegerWriter.java  ORCIntegerEncoding.java  OrcFile.java  OrcInputFormat.java  OrcOutputFormat.java  OrcSerde.java  OrcStruct.java  OrcUnion.java  OutStream.java  OutputBuffer.java  PositionProvider.java  PositionRecorder.java  PositionedOutputStream.java  Reader.java  ReaderImpl.java  RecordReader.java  RecordReaderImpl.java  RedBlackTree.java  (+17 more)
src/main/java/org/apache/hive/io/file/orc/: BitFieldWriter.java  ColumnStatistics.java  CompressionCodec.java  CompressionKind.java  DictionaryWriter.java  InStream.java  NullCompression.java  OrcFile.java  OutStream.java  PositionRecorder.java  PositionedOutputStream.java  Reader.java  ReaderImpl.java  RunLengthByteWriter.java  RunLengthIntegerWriter.java  SerializationUtils.java  SnappyCodec.java  Writer.java  WriterImpl.java  ZlibCodec.java
src/main/protobuf/org/apache/hadoop/hive/ql/io/file/orc/: orc_proto.proto
src/main/protobuf/org/apache/hadoop/hive/ql/io/orc/: orc_proto.proto
src/main/protobuf/org/apache/hive/io/file/orc/: orc_proto.proto
src/orc/: OrcFile.hh  Reader.hh  Vector.hh  Vectors.hh  orc-config.hh.in
src/site/: site.xml
src/site/apt/: index.apt
src/test/java/org/apache/hadoop/hive/ql/io/file/orc/: FileReader.java  FileWriter.java
src/test/java/org/apache/hadoop/hive/ql/io/orc/: FileReader.java  FileWriter.java  TestBitPack.java  TestBuildVectorizedRowBatch.java  TestCompareORCRealDataset.java  TestDynamicArray.java  TestFileDump.java  TestInputOutputFormat.java  TestNewIntegerEncoding.java  TestNewRunLengthIntegerReader.java  TestOrcFile.java  TestOrcStruct.java  TestStreamName.java  TestStringRedBlackTree.java
src/test/java/org/apache/hive/: AppTest.java
src/test/resources/: orc-file-dump.out  orc-file-dump.out~
src/wrap/: gmock.h  gtest-wrapper.h  orc-proto-wrapper.cc  orc-proto-wrapper.hh  zero-copy-stream-wrapper.h
test/: CMakeLists.txt  TestByteRle.cc  TestColumnReader.cc  TestCompression.cc  TestDriver.cc  TestDriver.hh  TestReader.cc  TestRle.cc  orc.suppress
